latex2mmlc/tests/snapshots/wiki_test__wiki091.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\mapsto, \\longmapsto"
---
<math>
    <mo>↦</mo>
    <mo>,</mo>
    <mo>⟼</mo>
</math>
