latex2mmlc/tests/snapshots/wiki_test__wiki092.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\rightharpoonup \\rightharpoondown \\leftharpoonup \\leftharpoondown \\upharpoonleft \\upharpoonright \\downharpoonleft \\downharpoonright \\rightleftharpoons \\leftrightharpoons"
---
<math>
    <mo>⇀</mo>
    <mo>⇁</mo>
    <mo>↼</mo>
    <mo>↽</mo>
    <mo>↿</mo>
    <mo>↾</mo>
    <mo>⇃</mo>
    <mo>⇂</mo>
    <mo>⇌</mo>
    <mo>⇋</mo>
</math>
