latex2mmlc/tests/snapshots/wiki_test__wiki094.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\curvearrowright \\circlearrowright \\Rsh \\downdownarrows \\leftleftarrows \\leftrightarrows \\leftarrowtail \\looparrowleft"
---
<math>
    <mo>↷</mo>
    <mo>↻</mo>
    <mo>↱</mo>
    <mo>⇊</mo>
    <mo>⇇</mo>
    <mo>⇆</mo>
    <mo>↢</mo>
    <mo>↫</mo>
</math>
