latex2mmlc/tests/snapshots/wiki_test__wiki096.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\amalg \\P \\S \\% \\dagger\\ddagger\\ldots\\cdots"
---
<math>
    <mo>⨿</mo>
    <mi>¶</mi>
    <mi>§</mi>
    <mi>%</mi>
    <mi>†</mi>
    <mi>‡</mi>
    <mo>…</mo>
    <mo>⋯</mo>
</math>
