latex2mmlc/tests/snapshots/wiki_test__wiki097.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\smile \\frown \\wr \\triangleleft \\triangleright"
---
<math>
    <mo>⌣</mo>
    <mo>⌢</mo>
    <mo>≀</mo>
    <mo>◁</mo>
    <mo>▷</mo>
</math>
