latex2mmlc/tests/snapshots/wiki_test__wiki100.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\eqcirc \\circeq \\triangleq \\bumpeq\\Bumpeq \\doteqdot \\risingdotseq \\fallingdotseq"
---
<math>
    <mo>≖</mo>
    <mo>≗</mo>
    <mo>≜</mo>
    <mo>≏</mo>
    <mo>≎</mo>
    <mo>≑</mo>
    <mo>≓</mo>
    <mo>≒</mo>
</math>
