latex2mmlc/tests/snapshots/wiki_test__wiki101.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\intercal \\barwedge \\veebar \\doublebarwedge \\between \\pitchfork"
---
<math>
    <mo>⊺</mo>
    <mo>⊼</mo>
    <mo>⊻</mo>
    <mo>⩞</mo>
    <mo>≬</mo>
    <mo>⋔</mo>
</math>
