latex2mmlc/tests/snapshots/wiki_test__wiki105.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: a_2
---
<math>
    <msub>
        <mi>a</mi>
        <mn>2</mn>
    </msub>
</math>
