latex2mmlc/tests/snapshots/wiki_test__wiki106.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "10^{30} a^{2+2} \\\\ a_{i,j} b_{f'}"
---
<math>
    <msup>
        <mn>10</mn>
        <mn>30</mn>
    </msup>
    <msup>
        <mi>a</mi>
        <mrow>
            <mn>2</mn>
            <mo>+</mo>
            <mn>2</mn>
        </mrow>
    </msup>
    
    <msub>
        <mi>a</mi>
        <mrow>
            <mi>i</mi>
            <mo>,</mo>
            <mi>j</mi>
        </mrow>
    </msub>
    <msub>
        <mi>b</mi>
        <msup>
            <mi>f</mi>
            <mo>′</mo>
        </msup>
    </msub>
</math>
